--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,8 +7,45 @@
 body{
     min-height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 7fr;
-    background-color: red;
+    grid-template-columns: 1.3fr 7fr;
+    grid-template-rows: 1fr 50px;
+
+}
+
+#sidebar{
+    background-color: green;
+}
+
+#content{
+}
+
+.medium-priority{
+    color: orange;
+}
+
+footer{
+    background-color: lightgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    grid-column: 1/3;
+    font-weight: bold;
+}
+
+
+.task{
+    display: flex;
+}
+
+.task:nth-child(odd){
+    background-color: rgba(0, 0, 0, 10%);
+}
+
+.task{
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 15px;
 }
 
 #new-task-modal-template{
@@ -18,13 +55,15 @@ body{
 #new-task-modal{
     position: fixed;
     z-index: 1;
-    left: 0;
-    top: 0;
-    height: 80%;
-    width: 80%;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 50px;
+    height: 500px;
+    width: 800px;
+    resize: both;
     overflow: auto;
     background-color: white;
-    margin: 35px;
     border: 1px solid black;
-    padding: 25px;
+
+
 }
