--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,11 +14,49 @@ body{
 
 #sidebar{
     background-color: green;
+
+}
+
+button{
+    cursor: pointer;
+}
+
+#navigation-buttons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding-top: 10px;
+    display: flex;
+}
+
+#navigation-buttons button{
+    text-align: left;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+}
+
+#navigation-buttons button svg{
+    height: 25px;
+}
+
+.table-container{
+    display: flex;
+    justify-content: center;
 }
 
 #task-list-table{
-    width: 100%;
+    width: 80%;
     margin: 15px;
+    text-align: center;
+}
+
+tr{
+    border-top-left-radius: 25px;
+    border: 1px solid black;
 }
 
 #task-list-table > tr:nth-child(odd){
